# ReceiptReader

./: .gitignore  CMakeLists.txt  README.md  connect-to-container.sh  docker-compose.yaml  dockerfile  get-pr-comments.sh  receipts.db  setup-container.sh  todo.txt
.github/: copilot-instructions.md
.github/skills/: SKILL.md  delete_pr_comment.sh  get_comment_ids.sh  get_pr_comments.sh  get_review_ids.sh
gh_cli_tools/: delete-pr-comment.sh
imgs/Receipt1/: IMG_3397.HEIC  IMG_3398.HEIC  IMG_3399.HEIC
proto/: processor.proto
src/: main.cpp
src/db/: database.cpp  database.h
src/ipc/: message_io.cpp  message_io.h
src/ocr/: ocr.cpp  ocr.h
src/parser/: parser.cpp  parser.h
src/server/: ProtobufServer.cpp  ProtobufServer.h  WebServer.cpp  WebServer.h  main.cpp  server.cpp  server.h
src/server/db/: database.cpp  database.h
src/server/parser/: parser.cpp
src/ui/: main.cpp  mainwindow.cpp  mainwindow.h  serverclient.cpp  serverclient.h
test/: database_test.cpp  ocr_test.cpp  parser_test.cpp
test/server/: server_integration_test.cpp
test/server/db/: database_test.cpp
test/server/ocr/: ocr_test.cpp
